# lawn-compliance

./: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: automated-checks.yml  revision-increment.yml
lawn_compliance/: __init__.py  app_settings.py  apps.py  auth_hooks.py  models.py  tasks.py
lawn_compliance/cogs/: compliance.py  pagetest.py
lawn_compliance/management/commands/: swash_task.py
lawn_compliance/migrations/: 0001_initial.py
lawn_compliance/utils/: utils.py
testauth/settings/: local.py
